# omega-cli

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
assets/core/: WORKFLOW_RULES.md
assets/core/agents/: discovery.md
assets/core/commands/: workflow-audit.md  workflow-bugfix.md  workflow-create-role.md  workflow-improve.md  workflow-new-feature.md  workflow-new.md
assets/core/db/: schema.sql
assets/core/db/queries/: briefing.sql  maintenance.sql
assets/core/hooks/: briefing.sh  debrief-gate.sh
assets/extensions/blockchain/agents/: blockchain-network.md
src/: claude_md.rs  cli.rs  db.rs  deploy.rs  doctor.rs  main.rs  self_update.rs  settings.rs  version.rs
src/assets/: extensions.rs  mod.rs
