[package]
name = "omg"
version = "0.1.0"
edition = "2021"
description = "OMEGA CLI — deploy multi-agent workflows to any project"
license = "MIT"
repository = "https://github.com/omgagi/omega-cli"

[[bin]]
name = "omg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["rustls-native-certs", "json"], default-features = false }
sha2 = "0.10"
self-replace = "1.5"
console = "0.16"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.50", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3.27"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
